--- a/src/App.css
+++ b/src/App.css
@@ -6,56 +6,9 @@ body {
   place-content: center;
   min-height: 100vh;
 }
-
-.App{
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+.app-container{
+  background: #9b9090;
+  width: 70vw;
+  margin: 0 auto;
 }
 
-article {
-  display: flex;
-  align-items: center;
-  color: #fff;
-  font-size: .8rem;
-  justify-content: space-between;
-}
-
-article header{
-  display: flex;
-  align-items: center;
-  gap: 4px;
-}
-
-article header div {
-  display: flex;
-  flex-direction: column;
-}
-
-article header span {
-  opacity: .6;
-}
-
-article img {
-  width: 48px;
-  height: 48px;
-  border-radius: 1000px;
-}
-
-
-.tw-followCard-button {
-  margin-left: 16px;
-  border: 0;
-  border-radius: 998px;
-  padding: 6px 16px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.tw-followCard-button:hover{
-  background: rgb(0, 97, 254);
-}
-
-.tw-followCard-button.is-following{
- background: #9b9090;
-}
